QA_Ipreo/src/objects/OpportunityLineItem.object
<CustomObject>
    <fields>
        <fullName>ACpV__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Annual Contracted Product Value - the Product level breakout for Annual Contracted Value (ACV).</inlineHelpText>
        <label>ACpV</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Facilitates Opportunity Product.Asset lookup filter. Maintained through trigger.</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunity Product</relationshipLabel>
        <relationshipName>Opportunity_Product</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Annual_Pass_Through__c</fullName>
        <inlineHelpText>For products where part of the amount paid by the customer is &quot;passed through&quot; to a third party, such as Factset Workstation, this is the portion of the ACpV (current year amount) that is passed through and not kept by Ipreo.</inlineHelpText>
        <label>Annual Pass Through</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apply_NYSE_Subsidy__c</fullName>
        <inlineHelpText>For customers purchasing products that are being subsidized by the NYSE, this allows selective application of the subsidy to specific products.  Defaults to &apos;no&apos;.  Select &apos;yes&apos; in order to apply subsidy to the Opportunity Product.</inlineHelpText>
        <label>Apply NYSE Subsidy?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Asset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Asset associated with Opportunity</description>
        <label>Asset</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Asset.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.Account__c</valueField>
            </filterItems>
            <filterItems>
                <field>Asset.Product2Id</field>
                <operation>equals</operation>
                <valueField>$Source.Product__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Opportunity Products</relationshipLabel>
        <relationshipName>Opportunity_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Backlog_Days__c</fullName>
        <formula>IF(Backlog__c, 
	IF(ISPICKVAL(Opportunity.ForecastCategoryName, &quot;Projected&quot;), Subscription_Start_Date__c - TODAY(), Subscription_Start_Date__c -  Revenue_Recognition_Date__c), 
	NULL
)</formula>
        <label>Backlog Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Backlog__c</fullName>
        <formula>IF(ISPICKVAL(Product_Transaction_Type__c, &quot;Renewal&quot;) &amp;&amp; Subscription_Start_Date__c &lt; DATE(YEAR(TODAY()), MONTH(TODAY()), 01), TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Backlog</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Backup_Opportunity_Product_Id__c</fullName>
        <description>This field is used to get Id in report. For SPS-580 data fix. Delete this field after the data fix.</description>
        <formula>Id</formula>
        <label>Backup Opportunity Product Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cancel_Comment__c</fullName>
        <inlineHelpText>Required if product is Lost/Cancelled/Downtick</inlineHelpText>
        <label>Lost/Cancelled/Downtick Comment</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Competitor_Incumbent__c</fullName>
        <inlineHelpText>For Products that are &quot;Won&quot;, the Competitor or Incumbent from which we took the customer&apos;s business.  For  Products that are &quot;Lost&quot; or are &quot;Cancelled&quot;, the Competitor or Incumbent to which we lost the customer&apos;s business.</inlineHelpText>
        <label>Competitor/Incumbent</label>
        <picklist>
            <controllingField>Product_Vertical__c</controllingField>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IPO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Analec</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ansarada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asbet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bloomberg</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BlueMatrix</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Boudica</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CapIQ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CEB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Citrix</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cmi2i</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Computershare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealogic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deal RoadShow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DebtX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DF King</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dynamics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance Adjustment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Firmex</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>iLevel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intralinks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Investor Networks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IR Japan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>J-IRIS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JSS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Markit®</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Merrill Corporation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Modular Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MZ Ilios</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>DM_Name__c</fullName>
        <label>DM Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Region__c</fullName>
        <label>Data Region</label>
        <picklist>
            <picklistValues>
                <fullName>AMER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMEA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Dataset__c</fullName>
        <label>Dataset</label>
        <picklist>
            <picklistValues>
                <fullName>Contacts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ownership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Debt_Issue_Size__c</fullName>
        <label>Debt Issue Size</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Dependent_on_Product_Code__c</fullName>
        <formula>Text( PricebookEntry.Product2.Dependent_on_Product_Code__c )</formula>
        <label>Dependent on Product Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Est_Start_Date__c</fullName>
        <label>Est. Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Estimated_Annual_Fees__c</fullName>
        <description>For transactional revenue</description>
        <inlineHelpText>For usage based products (ACV/TRANS products), the estimated amount expected to be paid by the customer for this year, based on estimated usage.</inlineHelpText>
        <label>Est. Annual Transaction Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Estimated_Completion_Date__c</fullName>
        <description>To track Delivery Date on Opportunity Products  when project revenue will be realized.</description>
        <inlineHelpText>Date on which project or report is expected to be delivered.  Applies to Project products, only; n/a for subscription products.  Required at Won or at Renewed if Subscription Dates and Term are not entered.</inlineHelpText>
        <label>Est. Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expense_Cap__c</fullName>
        <inlineHelpText>Current year amount that Ipreo agrees not to exceed for expenses charged back to customer, typically associated with software implementation or installation.</inlineHelpText>
        <label>Expense Cap</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Finance_Product_Code__c</fullName>
        <formula>Text( PricebookEntry.Product2.Finance_Product_Code__c )</formula>
        <label>Finance Product Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Finance_Product_Comments__c</fullName>
        <label>Finance Product Comments</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Free_Period_months__c</fullName>
        <inlineHelpText>Number of months of the Term being given to the customer for free.  Usually at the beginning of the term.</inlineHelpText>
        <label>Free Period (months)</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Group__c</fullName>
        <formula>TEXT( PricebookEntry.Product2.Family )</formula>
        <label>Group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>License__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>License</label>
        <referenceTo>Asset_License__c</referenceTo>
        <relationshipLabel>Opportunity Product</relationshipLabel>
        <relationshipName>Opportunity_Product</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lost_Cancelled_Reason__c</fullName>
        <inlineHelpText>Required when Opportunity Product &quot;Status&quot; is Lost or is Cancelled. Or If Revenue Delta Type is Downtick. If the Lost/Cancelled Reason indicates the business was lost to a competitor or incumbent, field Competitor/Incumbent is also required.</inlineHelpText>
        <label>Lost/Cancelled/Downtick Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Bankruptcy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Budget (No Competitor)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Uncertainty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competitor (Functionality)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competitor (Functionality + Price)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competitor (Price)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Did Nothing (Functionality)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Did Nothing (Functionality + Price)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Did Nothing (Price)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exited Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fewer Users</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance Adjustment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ipreo Decision</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Merger &amp; Acquisition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Reallocation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Subsidy Loss (No Competitor)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical Resource</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Master_ACV_Eligible__c</fullName>
        <description>Formula Logic:
=IF(Product Revenue Type = ACV or ACV/TRANS,
IF(Today’s Date is &gt;= Subscription Start Date AND &lt;= Subscription End Date, “TRUE”,
IF(Forecast Category = Projected AND Product Transaction Type = Renewal, “TRUE”, “FALSE”</description>
        <formula>IF(OR(ISPICKVAL(Product_Revenue_Type__c, &quot;ACV&quot;), ISPICKVAL(Product_Revenue_Type__c, &quot;ACV/TRANS&quot;)), 
	IF(AND(Opportunity.RecordType.Name = &quot;Renewal&quot;, ISBLANK(Opportunity.Original_Opportunity__c), ISPICKVAL(Opportunity.ForecastCategoryName, &quot;Projected&quot;)), 
		TRUE, 
		IF(AND(Opportunity.RecordType.Name = &quot;Renewal&quot;, ISBLANK(Opportunity.Original_Opportunity__c), ISPICKVAL(Opportunity.ForecastCategoryName, &quot;Contracted&quot;), Subscription_Start_Date__c &gt; TODAY()), 
			TRUE, 
			IF(AND(Opportunity.RecordType.Name = &quot;Renewal&quot;, ISPICKVAL(Status__c, &quot;Cancelled&quot;), Subscription_Start_Date__c &lt;= TODAY(), Subscription_End_Date__c &gt;= TODAY()),
				TRUE, 
				IF(AND(Subscription_Start_Date__c &lt;= TODAY(), Subscription_End_Date__c &gt;= TODAY(), ISPICKVAL(Opportunity.ForecastCategoryName, &quot;Contracted&quot;)), 
					TRUE, 
					FALSE
				) 
			) 
		) 
	), 
	FALSE 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Master ACV Eligible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Master_ACV_Value__c</fullName>
        <formula>IF(OR(ISPICKVAL(Product_Revenue_Type__c, &quot;ACV&quot;), ISPICKVAL(Product_Revenue_Type__c, &quot;ACV/TRANS&quot;)), 
IF(AND(Opportunity.RecordType.Name = &quot;Renewal&quot;, ISBLANK(Opportunity.Original_Opportunity__c), ISPICKVAL(Opportunity.ForecastCategoryName, &quot;Projected&quot;)), Prior_Year_ACpV__c - Prior_Year_Pass_Through__c, 
IF(AND(Opportunity.RecordType.Name = &quot;Renewal&quot;, ISBLANK(Opportunity.Original_Opportunity__c), ISPICKVAL(Opportunity.ForecastCategoryName, &quot;Contracted&quot;), Subscription_Start_Date__c &gt; TODAY()),  Prior_Year_ACpV__c - Prior_Year_Pass_Through__c, 
IF(AND(Opportunity.RecordType.Name = &quot;Renewal&quot;, ISPICKVAL(Status__c, &quot;Cancelled&quot;), Subscription_Start_Date__c &lt;= TODAY(), Subscription_End_Date__c &gt;= TODAY()), Net_New_Business__c,
IF(AND(Subscription_Start_Date__c &lt;= TODAY(), Subscription_End_Date__c &gt;= TODAY(), ISPICKVAL(Opportunity.ForecastCategoryName, &quot;Contracted&quot;)),  Net_ACpV__c, 
0 
) 
)
) 
), 
0 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Master ACV Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Net_ACpV__c</fullName>
        <formula>ACpV__c -  Annual_Pass_Through__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is a formula field that calculates ACpV - Annual Pass Through</inlineHelpText>
        <label>Net ACpV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Net_New_Business__c</fullName>
        <description>(Renewals only)
Delta between current revenue and previous revenue
Calculated.</description>
        <inlineHelpText>Read only, formula field:  (ACpV - Annual Pass Through) - (Prior Year ACpV - Prior Year Pass Through).</inlineHelpText>
        <label>Net New Business</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>No_of_Calls__c</fullName>
        <label>No. of Calls</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_Certificates__c</fullName>
        <label>No. of Certificates</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_Conferences__c</fullName>
        <label>No. of Conferences</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_Deals__c</fullName>
        <label>No. of Deals</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_Meetings__c</fullName>
        <label>No. of Meetings</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_Questions__c</fullName>
        <label>No. of Questions</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_Reports__c</fullName>
        <label>No. of Reports</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_Users__c</fullName>
        <inlineHelpText>Number of users licensed for software products</inlineHelpText>
        <label>No. of Users</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OppProductUniqueKey__c</fullName>
        <description>data migration purpose</description>
        <externalId>true</externalId>
        <label>OppProductUniqueKey</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Per_Transaction_Fee__c</fullName>
        <label>Per Transaction Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Prior_Year_ACpV__c</fullName>
        <description>For use in renewal uptick calculation</description>
        <inlineHelpText>For New Business Opportunities, this is 0.  For renewals, it is populated by the system with the ACpV from the previous Opportunity.  Used in calculating Net New Business for the Opportunity Product.</inlineHelpText>
        <label>Prior Year ACpV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Prior_Year_Pass_Through__c</fullName>
        <inlineHelpText>For New Business Opportunities, this is 0.  For renewals, it is populated by the system with the Annual Pass Through from the previous Opportunity.  Used in calculating Net New Business for the Opportunity Product.</inlineHelpText>
        <label>Prior Year Pass Through</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product_Lost_Amount_Annual__c</fullName>
        <label>Product Lost Amount (Annual)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product_Lost_Amount_Total__c</fullName>
        <label>Product Lost Amount (Total)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product_Region__c</fullName>
        <inlineHelpText>Defaults from Region of Opportunity Owner.  Can be changed.</inlineHelpText>
        <label>Product Region</label>
        <picklist>
            <picklistValues>
                <fullName>NA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LATAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMEA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JAPAN</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_Revenue_Type__c</fullName>
        <description>Type of revenue associated with the opportunity product</description>
        <inlineHelpText>ACV:  Annual Contracted Value - subscription product.  PROJ:  Project.  ACV/TRANS:  Usage based product.  ACV/PROJ:  Project sold as part of a subscription.</inlineHelpText>
        <label>Product Revenue Type</label>
        <picklist>
            <picklistValues>
                <fullName>ACV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PROJ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACV/TRANS</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_Subregion__c</fullName>
        <label>Product Subregion</label>
        <picklist>
            <controllingField>Product_Region__c</controllingField>
            <picklistValues>
                <fullName>Germanics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Russia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Southern Europe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_Transaction_Type__c</fullName>
        <inlineHelpText>New Business:  new product for new customer.  Upsell:  new product for existing customer.  Add On:  add on users for existing product.  Renewal:  renewal of existing product.</inlineHelpText>
        <label>Product Transaction Type</label>
        <picklist>
            <picklistValues>
                <fullName>New Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Upsell</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Add On</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renewal</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_Vertical__c</fullName>
        <label>Product Vertical</label>
        <picklist>
            <picklistValues>
                <fullName>Corporate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GMG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PCS</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Facilitates Opportunity Product.Asset lookup filter. Maintained through trigger.</description>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Opportunity Product</relationshipLabel>
        <relationshipName>Opportunity_Product</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RAG_Status__c</fullName>
        <description>Get Asset Status to Opportunity Product</description>
        <formula>Text( Asset__r.RAG_status__c )</formula>
        <label>RAG Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason_for_RAG_Status__c</fullName>
        <formula>Asset__r.Reason_for_RAG_Status__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reason for RAG Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recognition_Month__c</fullName>
        <formula>CASE(MONTH(  Subscription_Start_Date__c ),
    	   1, &apos;January&apos;,
    	   2, &apos;February&apos;,
    	   3, &apos;March&apos;,
    	   4, &apos;April&apos;,
    	   5, &apos;May&apos;,
    	   6, &apos;June&apos;,
    	   7, &apos;July&apos;,
    	   8, &apos;August&apos;,
    	   9, &apos;September&apos;,
    	   10, &apos;October&apos;,
    	   11, &apos;November&apos;,
    	   12, &apos;December&apos;,
    	   &apos;&apos;)
+ &apos; - &apos; + TEXT(YEAR(Subscription_Start_Date__c))</formula>
        <label>Recognition Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referral_Partner__c</fullName>
        <inlineHelpText>Partner that recommended IPREO to the customer.</inlineHelpText>
        <label>Levered Sale</label>
        <picklist>
            <picklistValues>
                <fullName>Arbor Advisory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Artemis IR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blackstone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brunswick</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Christensen IR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Citigate DR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>College Hill</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Continental Stock Transfer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daiwa IR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deutsche DR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EQS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Goldman Sachs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Investis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Iridium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JPM DR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Market Eye</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mitsubishi Securities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nomura IR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Open Exchange</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q4 Websystems</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Registrar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Santander</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Singapore Stock Exchange</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SMTB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SNL Financial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solebury IR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Takara Printing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Theoria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TSTA (Tokyo Stock Transfer Agent)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Renewal_Increase__c</fullName>
        <inlineHelpText>Increase % expected when Opportunity Product is renewed.  When Opportunity is Closed Won Verified, causing a Renewal Opportunity to be created, the ACpV on the Opportunity Product on the Renewal is set to current ACpV + (current ACpV*Renewal Increase %).</inlineHelpText>
        <label>Renewal Increase (%)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Requires_Implementation_UAT__c</fullName>
        <label>Requires Implementation (UAT)</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Revenue_Delta_Type__c</fullName>
        <label>Product Revenue Delta Type</label>
        <picklist>
            <picklistValues>
                <fullName>Uptick</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Downtick</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flat</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Revenue_Recognition_Date_Current_Mont__c</fullName>
        <description>Used primarily for ExComm report filtering in Wave</description>
        <formula>Revenue_Recognition_Date__c &gt;= DATE(YEAR(TODAY()),MONTH(TODAY()),01)</formula>
        <label>Revenue Recognition Date &gt;= Current Mont</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Revenue_Recognition_Date__c</fullName>
        <description>Used primarily in reporting</description>
        <formula>IF(
	CONTAINS(TEXT(Opportunity.StageName), &quot;Verified&quot;), 
	IF(
		NOT(ISPICKVAL(Product_Revenue_Type__c, &quot;PROJ&quot;)),
		IF(
			AND(
   				NOT( ISBLANK(Opportunity.CloseDate) ) ,
   				NOT( ISBLANK(Subscription_Start_Date__c) )
  			),
   			IF(
				Opportunity.CloseDate &gt; Subscription_Start_Date__c, 
     				Opportunity.CloseDate,
     				Subscription_Start_Date__c
     			), 
  			NULL
		),
		Work_Order__r.Completion_Date__c
	),
	NULL
)</formula>
        <label>Revenue Recognition Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Revenue_Recognition_Month__c</fullName>
        <formula>DATE(YEAR( Revenue_Recognition_Date__c ),MONTH( Revenue_Recognition_Date__c ),1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Revenue Recognition Month</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Site_License__c</fullName>
        <label>Site License</label>
        <picklist>
            <picklistValues>
                <fullName>AMER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMEA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
</CustomObject>